Adding PyCitySchools.ipynb

--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -249,7 +249,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/xf/dlp3s4jj0hj2zybftc3x7stc0000gn/T/ipykernel_63023/981040853.py:2: DtypeWarning: Columns (1,6,7) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/xf/dlp3s4jj0hj2zybftc3x7stc0000gn/T/ipykernel_63187/981040853.py:2: DtypeWarning: Columns (0,5,6) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  student_data_df = pd.read_csv(student_data_to_load) #left DataFrame\n"
      ]
     },
@@ -352,106 +352,93 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>78337</th>\n",
+       "      <td>39165</td>\n",
+       "      <td>Donna Howard</td>\n",
+       "      <td>F</td>\n",
+       "      <td>12th</td>\n",
+       "      <td>Thomas High School</td>\n",
+       "      <td>99</td>\n",
+       "      <td>90</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>78338</th>\n",
        "      <td>39166</td>\n",
-       "      <td>39166.0</td>\n",
        "      <td>Dawn Bell</td>\n",
        "      <td>F</td>\n",
        "      <td>10th</td>\n",
        "      <td>Thomas High School</td>\n",
-       "      <td>95.0</td>\n",
-       "      <td>70.0</td>\n",
+       "      <td>95</td>\n",
+       "      <td>70</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>78339</th>\n",
        "      <td>39167</td>\n",
-       "      <td>39167.0</td>\n",
        "      <td>Rebecca Tanner</td>\n",
        "      <td>F</td>\n",
        "      <td>9th</td>\n",
        "      <td>Thomas High School</td>\n",
-       "      <td>73.0</td>\n",
-       "      <td>84.0</td>\n",
+       "      <td>73</td>\n",
+       "      <td>84</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>78340</th>\n",
        "      <td>39168</td>\n",
-       "      <td>39168.0</td>\n",
        "      <td>Desiree Kidd</td>\n",
        "      <td>F</td>\n",
        "      <td>10th</td>\n",
        "      <td>Thomas High School</td>\n",
-       "      <td>99.0</td>\n",
-       "      <td>90.0</td>\n",
+       "      <td>99</td>\n",
+       "      <td>90</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>78341</th>\n",
        "      <td>39169</td>\n",
-       "      <td>39169.0</td>\n",
        "      <td>Carolyn Jackson</td>\n",
        "      <td>F</td>\n",
        "      <td>11th</td>\n",
        "      <td>Thomas High School</td>\n",
-       "      <td>95.0</td>\n",
-       "      <td>75.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>78342</th>\n",
-       "      <td>&gt;&gt;&gt;&gt;&gt;&gt;&gt; 799e5cffc527c0862e9f17ac7b238299127c5a9b</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>95</td>\n",
+       "      <td>75</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>78343 rows × 8 columns</p>\n",
+       "<p>78342 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                             Unnamed: 0       Student ID  \\\n",
-       "0                                                     0     Paul Bradley   \n",
-       "1                                                     1     Victor Smith   \n",
-       "2                                                     2  Kevin Rodriguez   \n",
-       "3                                                     3    Richard Scott   \n",
-       "4                                                     4       Bonnie Ray   \n",
-       "...                                                 ...              ...   \n",
-       "78338                                             39166          39166.0   \n",
-       "78339                                             39167          39167.0   \n",
-       "78340                                             39168          39168.0   \n",
-       "78341                                             39169          39169.0   \n",
-       "78342  >>>>>>> 799e5cffc527c0862e9f17ac7b238299127c5a9b              NaN   \n",
+       "      Unnamed: 0       Student ID student_name gender               grade  \\\n",
+       "0              0     Paul Bradley            M    9th   Huang High School   \n",
+       "1              1     Victor Smith            M   12th   Huang High School   \n",
+       "2              2  Kevin Rodriguez            M   12th   Huang High School   \n",
+       "3              3    Richard Scott            M   12th   Huang High School   \n",
+       "4              4       Bonnie Ray            F    9th   Huang High School   \n",
+       "...          ...              ...          ...    ...                 ...   \n",
+       "78337      39165     Donna Howard            F   12th  Thomas High School   \n",
+       "78338      39166        Dawn Bell            F   10th  Thomas High School   \n",
+       "78339      39167   Rebecca Tanner            F    9th  Thomas High School   \n",
+       "78340      39168     Desiree Kidd            F   10th  Thomas High School   \n",
+       "78341      39169  Carolyn Jackson            F   11th  Thomas High School   \n",
        "\n",
-       "          student_name gender              grade         school_name  \\\n",
-       "0                    M    9th  Huang High School                  66   \n",
-       "1                    M   12th  Huang High School                  94   \n",
-       "2                    M   12th  Huang High School                  90   \n",
-       "3                    M   12th  Huang High School                  67   \n",
-       "4                    F    9th  Huang High School                  97   \n",
-       "...                ...    ...                ...                 ...   \n",
-       "78338        Dawn Bell      F               10th  Thomas High School   \n",
-       "78339   Rebecca Tanner      F                9th  Thomas High School   \n",
-       "78340     Desiree Kidd      F               10th  Thomas High School   \n",
-       "78341  Carolyn Jackson      F               11th  Thomas High School   \n",
-       "78342              NaN    NaN                NaN                 NaN   \n",
+       "      school_name reading_score  math_score  \n",
+       "0              66            79         NaN  \n",
+       "1              94            61         NaN  \n",
+       "2              90            60         NaN  \n",
+       "3              67            58         NaN  \n",
+       "4              97            84         NaN  \n",
+       "...           ...           ...         ...  \n",
+       "78337          99            90         NaN  \n",
+       "78338          95            70         NaN  \n",
+       "78339          73            84         NaN  \n",
+       "78340          99            90         NaN  \n",
+       "78341          95            75         NaN  \n",
        "\n",
-       "      reading_score math_score  \n",
-       "0                79        NaN  \n",
-       "1                61        NaN  \n",
-       "2                60        NaN  \n",
-       "3                58        NaN  \n",
-       "4                84        NaN  \n",
-       "...             ...        ...  \n",
-       "78338          95.0       70.0  \n",
-       "78339          73.0       84.0  \n",
-       "78340          99.0       90.0  \n",
-       "78341          95.0       75.0  \n",
-       "78342           NaN        NaN  \n",
-       "\n",
-       "[78343 rows x 8 columns]"
+       "[78342 rows x 8 columns]"
       ]
      },
      "execution_count": 6,
