district summary complete.

--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -1508,7 +1508,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "10d9b153",
+   "id": "e07733c9",
    "metadata": {},
    "outputs": [
     {
@@ -1583,10 +1583,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01659e97",
+   "id": "f2d1833d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# End of 4.7"
+   ]
   }
  ],
  "metadata": {
