high-low performing schools

--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -1508,7 +1508,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "1217b1b6",
+   "id": "906b1d61",
    "metadata": {},
    "outputs": [
     {
@@ -1583,7 +1583,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92c29a93",
+   "id": "905a6f4d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1593,7 +1593,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "abd08d23",
+   "id": "9d502dfc",
    "metadata": {},
    "outputs": [
     {
@@ -1781,7 +1781,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "d9df098c",
+   "id": "fb23d4bb",
    "metadata": {},
    "outputs": [
     {
@@ -1820,7 +1820,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "d5670d7a",
+   "id": "2d4f9eed",
    "metadata": {},
    "outputs": [
     {
@@ -1950,7 +1950,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "0965b138",
+   "id": "e8eb95e7",
    "metadata": {},
    "outputs": [
     {
@@ -1988,7 +1988,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "0d44fab2",
+   "id": "b7484da5",
    "metadata": {},
    "outputs": [
     {
@@ -2031,7 +2031,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "f265e864",
+   "id": "e7785afa",
    "metadata": {},
    "outputs": [
     {
@@ -2069,7 +2069,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "fe2e83ac",
+   "id": "e168368a",
    "metadata": {},
    "outputs": [
     {
@@ -2108,7 +2108,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "5e06611c",
+   "id": "b94c867a",
    "metadata": {},
    "outputs": [
     {
@@ -2146,7 +2146,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "7a6d56cd",
+   "id": "c1980599",
    "metadata": {},
    "outputs": [
     {
@@ -2181,7 +2181,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "dd9b3170",
+   "id": "bb7c7521",
    "metadata": {},
    "outputs": [
     {
@@ -2417,7 +2417,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "fb886777",
+   "id": "23c2cf74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2430,7 +2430,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "78d6e8a1",
+   "id": "9b8e511c",
    "metadata": {},
    "outputs": [
     {
@@ -2468,7 +2468,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "013ffe04",
+   "id": "8e73383f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2481,7 +2481,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "c44c4383",
+   "id": "aacf91d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2494,7 +2494,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "274499d3",
+   "id": "299c21dd",
    "metadata": {},
    "outputs": [
     {
@@ -2733,7 +2733,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "63322c3f",
+   "id": "9d7caeff",
    "metadata": {},
    "outputs": [
     {
@@ -2972,7 +2972,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "ba2f7247",
+   "id": "11c5cbb9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2985,7 +2985,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "9fcc62c3",
+   "id": "c84d8813",
    "metadata": {},
    "outputs": [
     {
@@ -3022,7 +3022,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "1885f4cc",
+   "id": "4b566604",
    "metadata": {},
    "outputs": [
     {
@@ -3059,7 +3059,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "afea25df",
+   "id": "3d75d52b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3072,7 +3072,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "f9b303f3",
+   "id": "55bc1f84",
    "metadata": {},
    "outputs": [
     {
@@ -3108,7 +3108,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "8f2da0d8",
+   "id": "edd6597c",
    "metadata": {},
    "outputs": [
     {
@@ -3144,7 +3144,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "7bcd5c4e",
+   "id": "401ce562",
    "metadata": {},
    "outputs": [
     {
@@ -3286,7 +3286,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "6350affc",
+   "id": "10e0a33d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3297,7 +3297,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "94742cae",
+   "id": "64d34d5f",
    "metadata": {},
    "outputs": [
     {
@@ -3334,7 +3334,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "63e33a26",
+   "id": "8639ef5b",
    "metadata": {},
    "outputs": [
     {
@@ -3372,7 +3372,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "1779eec6",
+   "id": "9fec60d2",
    "metadata": {},
    "outputs": [
     {
@@ -3526,7 +3526,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "332d9f23",
+   "id": "346b050a",
    "metadata": {},
    "outputs": [
     {
@@ -3675,7 +3675,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "c79e90db",
+   "id": "4cf17cf5",
    "metadata": {},
    "outputs": [
     {
@@ -3823,7 +3823,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "d4ea5c4c",
+   "id": "87e63d00",
    "metadata": {},
    "outputs": [
     {
@@ -3968,7 +3968,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "23ddf7d7",
+   "id": "bb6a290e",
    "metadata": {},
    "outputs": [
     {
@@ -4113,8 +4113,139 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 99,
+   "id": "fb60bc92",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Cat:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "50c4bf17",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Felix\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_cat = Cat('Felix')\n",
+    "print(first_cat.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "d9d33866",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Garfield\n"
+     ]
+    }
+   ],
+   "source": [
+    "second_cat = Cat('Garfield')\n",
+    "print(second_cat.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "16c5f9af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Dog:\n",
+    "    def __init__(self, name, color, sound):\n",
+    "        self.name = name\n",
+    "        self.color = color\n",
+    "        self.sound = sound\n",
+    "\n",
+    "    def bark(self):\n",
+    "        return self.sound + ' ' + self.sound"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "bd6f4104",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fido\n",
+      "brown\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'woof! woof!'"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "first_dog = Dog('Fido', 'brown', 'woof!')\n",
+    "print(    first_dog.name)\n",
+    "print(first_dog.color)\n",
+    "first_dog.bark()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "8cdbef1e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lady\n",
+      "blonde\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'arf! arf!'"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "second_dog = Dog('Lady', 'blonde', 'arf!')\n",
+    "print(    second_dog.name)\n",
+    "print(second_dog.color)\n",
+    "second_dog.bark()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "dda9ad6c",
+   "id": "26a53f44",
    "metadata": {},
    "outputs": [],
    "source": []
